// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About renders correctly with all props 1`] = `
.c0 {
  padding-top: 6rem;
  padding-bottom: 6rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c6 {
  display: flex;
  gap: 0.75rem;
  flex-wrap: wrap;
}

.c4 {
  color: #a0a0b0;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c3 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 2rem;
  max-width: 600px;
}

.c5 {
  max-width: 680px;
  line-height: 1.7;
  margin-bottom: 2.5rem;
}

.c7 {
  display: inline-block;
  padding: 0.5rem 1.25rem;
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
  font-size: 0.875rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 3.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 1rem;
  }
}

<div>
  <section
    class="c0"
    id="about"
  >
    <section
      class="c1"
    >
      <p
        class="c2"
      >
        About
      </p>
      <h2
        class="c3"
      >
        Senior Frontend Developer & Tech Lead
      </h2>
      <p
        class="c4 c5"
        variant="large"
      >
        I build high-performance ecommerce experiences with React, Next.js, TypeScript and Shopify. Over a decade working across agencies and in-house teams — from Milan to Amsterdam to Bangkok — always remote-first, always shipping.
      </p>
      <div
        class="c6"
      >
        <span
          class="c7"
        >
          📍 Bangkok, Thailand
        </span>
        <span
          class="c7"
        >
          💼 Open to remote roles
        </span>
      </div>
    </section>
  </section>
</div>
`;

exports[`About renders correctly without optional tags 1`] = `
.c0 {
  padding-top: 6rem;
  padding-bottom: 6rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  color: #a0a0b0;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c3 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 2rem;
  max-width: 600px;
}

.c5 {
  max-width: 680px;
  line-height: 1.7;
  margin-bottom: 2.5rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="about"
  >
    <section
      class="c1"
    >
      <p
        class="c2"
      >
        About
      </p>
      <h2
        class="c3"
      >
        Senior Frontend Developer & Tech Lead
      </h2>
      <p
        class="c4 c5"
        variant="large"
      >
        I build high-performance ecommerce experiences with React, Next.js, TypeScript and Shopify.
      </p>
    </section>
  </section>
</div>
`;
